--- a/.notes/2025-09-14_20-22_EEST_to-do.md
+++ b/.notes/2025-09-14_20-22_EEST_to-do.md
@@ -1,39 +1,57 @@
+<!-- markdownlint-disable heading-increment line-length first-line-heading -->
+# .notes/2025-09-14_20-22_EEST_to-do.md
+
 I want to do three things. These are my main tasks.
-  Do not do anything, Claude Code unless I specifically ask you.
 
-  BACKGROUND: I have submitted the project and had an audit. 
-  During the audit three requirements failed.
+Do not do anything, Claude Code unless I specifically ask you.
 
-  in @.notes/make-your-game-01-edu-audit-readme.md
-  ```
-  - Does the countdown/timer clock seem to be working?
-  - Can you confirm that the layers are being used as little as possible?
-  - Is layer creation being promoted properly? 
-  - Does the game run at/or around 60fps? (from 50 to 60 or more)
-  ```
+**BACKGROUND:** I have submitted the project and had an audit.
+During the audit three requirements failed.
 
-  Answers:
-  ### Timer
-  There is not timer. That needs to be implemented
-  ### Layers
-  Layers, technically there are no layers as such that would be seen in Chrome. Ideally we should have at 
-  least two, better 3 or 4:
-  4. pop up screens, game over, start screen
-  3. paddle and ball
-  2.Bricks and scores
-  1.Background, pop up at bottom, keys and their function
-  ### 60 FPS
-  It is actually 30 FPS at the minute. The game loop actually does unnessary stuff that can be sucessfully 
-  eliminated
+  [Audit README](make-your-game-01-edu-audit-readme.md)
 
-  0 Task
-  - Sort out git script/workflow to save local changes in feature. Name it, document it, comment,  tag it, 
-  merge (!!!!!) it with existing remote stuff on that branch,
-  then merge feature with dev branch
-  then merge working dev branch with main 
-  - 
+###### Questions
 
+### Timer
 
-  Three tasks:
-  1. Change FPS by cutting out unnessary code in game loop. 
-     Test that.
+- **?** [Does the countdown/timer clock seem to be working?](make-your-game-01-edu-audit-readme.md#does-the-countdowntimer-clock-seem-to-be-working)  
+  **!**    There is no timer. That needs to be implemented
+
+### Layers
+
+- **?** [Can you confirm that the layers are being used as little as possible?](make-your-game-01-edu-audit-readme.md#can-you-confirm-that-the-layers-are-being-used-as-little-as-possible)  
+  **!** Layers, technically there are no layers as such that would be seen in Chrome. Ideally we should have at
+  least two, better 3 or 4:  
+    &nbsp;&nbsp;&nbsp;&nbsp;1\. pop up screens, game over, start screen  
+    &nbsp;&nbsp;&nbsp;&nbsp;2\. paddle and ball  
+    &nbsp;&nbsp;&nbsp;&nbsp;3\. Bricks and scores  
+    &nbsp;&nbsp;&nbsp;&nbsp;4\. Background, pop up at bottom, keys and their function
+
+### 60 FPS
+
+**?** [Does the game run at/or around 60fps? (from 50 to 60 or more)](./make-your-game-01-edu-audit-readme.md#does-the-game-run-ator-around-60fps-from-50-to-60-or-more)  
+**!** It is actually 30 FPS at the minute. The game loop actually does unnessary stuff that can be sucessfully eliminated
+
+### Tasks
+
+0. Task  
+    - [ ] Sort out git script/workflow to save local changes in `feature`.  
+        - [ ] Name it  
+        - [ ] document it  
+        - [ ] comment & and commit  
+        - [ ] tag it
+        - [ ] merge (!!!!!) it with existing remote stuff on that branch  
+        - [ ] *then* merge `feature` with `dev` branch  
+        - [ ] *then* merge working `dev` branch with `main`
+  
+1. Change 30 FPS to 60 FPS by cutting out unnessary code in game loop.  
+   - [ ] 60 FPS  
+   - [ ] Test that by checking in Browser  
+   - [ ] commit, merge with dev, push to gitea, merge with main
+  
+2. Timer  
+    - [ ] take timer from experiments  
+        - [ ] merge experiments with dev and main  
+        kkk kkkk
+3. Layers  
+   - [ ] 
